--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
 	"name" : "KnowledgeHub",
 	"author" : "Farouq Jouti",
-	"permissions": ["contextMenus", "activeTab", "tabs"],
+	"permissions": ["contextMenus",  "tabs"],
 
 	"manifest_version" : 2.0,
 	"version" : "1.0",
 	"content_scripts" : [{
 		"matches": ["<all_urls>"],
-		"js": ["content-script.js"]
+		"js": ["content-script.js", "lodash.js"]
 	}],
 
 	"background":{
