--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,17 @@
 {
 	"name" : "KnowledgeHub",
 	"author" : "Farouq Jouti",
-	"permissions": ["contextMenus",  "tabs"],
+	"permissions": ["contextMenus",  "tabs", "menus"],
 
 	"manifest_version" : 2.0,
 	"version" : "1.0",
 	"content_scripts" : [{
 		"matches": ["<all_urls>"],
-		"js": ["content-script.js", "lodash.js"]
+		"js": ["content-script.js"]
 	}],
 
 	"background":{
 		"scripts": ["background-script.js"]
-	}
+	},
+	"web_accessible_resources": ["resources/menu.html", "resources/menu.css"]
 }
