--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name" : "myKbits",
 	"author" : "Farouq Jouti",
-	"permissions": ["contextMenus",  "tabs", "menus", "clipboardWrite", "activeTab", "*://*/*"],
+	"permissions": ["contextMenus",  "tabs", "menus", "clipboardWrite", "activeTab", "*://*/*", "storage"],
 
 	"manifest_version" : 2.0,
 	"version" : "1.0",
