--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/cpt-n3m0/myKbits#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "node-wget": "^0.4.3"
+    "node-wget": "^0.4.3",
+    "semantria-sdk": "http://www.semantria.com/download/SDK/SemantriaNodejsSDK.tar.gz"
   }
 }
